Timer is now fully operational! Scrambles are done correctly now, but I have no clue why the code works. I didn't change a thing, and now it chooses to work! But hey, I ain't complaining. New release should be coming out in the very near future (ie. 15 minutes).

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ flutter:
     - assets/2-Look/PLL/Ub_Perm.png
     - assets/2-Look/PLL/Z_Perm.png
     - assets/MainApp/3x3_with_top_layer_turned.png
+    - assets/PLL/J_Perm.png
+    - assets/MainApp/timer_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
